improved header margins.  Thank you Lord!

--- a/printer.html
+++ b/printer.html
@@ -32,7 +32,13 @@
 			font-weight:normal;
 		}
 		thead {
-			border-bottom:solid white 4px;
+			/*border-bottom:solid white 4px;*/
+		}
+		.book-table {
+			margin-top:8px;
+		}
+		.book-th {
+			padding-bottom:4px;
 		}
 		.compact-table {
 			font-size:12px;
