--- a/pagedjs-template.html
+++ b/pagedjs-template.html
@@ -28,18 +28,18 @@
 			padding-bottom:4px;
 		}
 		/* from https://stackoverflow.com/questions/19798923/printing-text-in-html-in-the-center-of-the-page */
-		.title-page {
+		.full-page {
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			width: 100%;
 			height: 100vh;
 		}
-		.copyright-page {
-			height: 100vh;
-		}
-		.copyright-page h2 {
+		.heading {
 			font-size:////heading-font-size////px;
+		}
+		h1 {
+			font-size:////title-font-size////px;
 		}
 		@page {
 			margin-top:////top////cm;
@@ -57,6 +57,14 @@
 		@page:right {
 			margin-left:////left////cm;
 			margin-right:////right////cm;
+		}
+		.controls{
+			padding:16px;
+		}
+	</style>
+	<style type="text/css" media="print">
+		.controls{
+			display:none;
 		}
 	</style>
 	<script src="paged.polyfill.js"></script>
